@@ -4802,10 +4802,10 @@ EOFPGSZ
 
     # Add info about driver properties
     my $drvproperties = "";
-    $drvproperties .= "*driverName $dat->{'driver'}/$dat->{'driver'}" .
+    $drvproperties .= "*driverName $dat->{'driver'}: \"" .
 	($dat->{'shortdescription'} ? 
-	 " - $dat->{'shortdescription'}" : "") . 
-	 ": \"\"\n" if defined($dat->{'driver'});
+	 $dat->{'shortdescription'} : "") . 
+	 "\"\n" if defined($dat->{'driver'});
     $drvproperties .= "*driverType $dat->{'type'}" .
 	($dat->{'type'} eq "G" ? "/Ghostscript built-in" :
 	 ($dat->{'type'} eq "U" ? "/Ghostscript Uniprint" :
